packages/svelte/tests/compiler-errors/samples/runes-wrong-props-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_invalid_arguments',
		message: '`$props` cannot be called with arguments'
	}
});
